// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleSwitch /> with \`big\` prop matches with snapshot 1`] = `
<div
  className="toggle-switch__StyledSwitchContainer-ski4b0-0 geFWyC"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="toggle-switch__StyledSwitch-ski4b0-1 bTBEHX"
    disabled={false}
    id="switch-component"
    onClick={[Function]}
    type="button"
  />
  <label
    className="toggle-switch__StyledLabel-ski4b0-2 fkoDWj"
    for="switch-component"
  >
    switch
  </label>
</div>
`;

exports[`<ToggleSwitch /> with \`checkedColor\` \`defaultColor\` & \`disabledColor\` props matches with snapshot 1`] = `
<div
  className="toggle-switch__StyledSwitchContainer-ski4b0-0 geFWyC"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="toggle-switch__StyledSwitch-ski4b0-1 iKThTk"
    disabled={false}
    id="switch-component"
    onClick={[Function]}
    type="button"
  />
  <label
    className="toggle-switch__StyledLabel-ski4b0-2 iPHmHV"
    for="switch-component"
  >
    switch
  </label>
</div>
`;

exports[`<ToggleSwitch /> with \`disabled\` prop matches with snapshot 1`] = `
<div
  className="toggle-switch__StyledSwitchContainer-ski4b0-0 zihLl"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="toggle-switch__StyledSwitch-ski4b0-1 bTBEHX"
    disabled={true}
    id="switch-component"
    onClick={[Function]}
    type="button"
  />
  <label
    className="toggle-switch__StyledLabel-ski4b0-2 doOYGH"
    for="switch-component"
  >
    switch
  </label>
</div>
`;

exports[`<ToggleSwitch /> with \`isChecked\` prop matches with snapshot 1`] = `
<div
  className="toggle-switch__StyledSwitchContainer-ski4b0-0 geFWyC"
>
  <button
    aria-label={null}
    aria-pressed={true}
    className="toggle-switch__StyledSwitch-ski4b0-1 bTBEHX"
    disabled={false}
    id="switch-component"
    onClick={[Function]}
    type="button"
  />
  <label
    className="toggle-switch__StyledLabel-ski4b0-2 doOYGH"
    for="switch-component"
  >
    switch
  </label>
</div>
`;

exports[`<ToggleSwitch /> with \`isLabelVisible\` prop matches with snapshot 1`] = `
<div
  className="toggle-switch__StyledSwitchContainer-ski4b0-0 geFWyC"
>
  <button
    aria-label="switch"
    aria-pressed={false}
    className="toggle-switch__StyledSwitch-ski4b0-1 bTBEHX"
    disabled={false}
    id="switch-component"
    onClick={[Function]}
    type="button"
  />
</div>
`;

exports[`<ToggleSwitch /> with \`label\` prop matches with snapshot 1`] = `
<div
  className="toggle-switch__StyledSwitchContainer-ski4b0-0 geFWyC"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="toggle-switch__StyledSwitch-ski4b0-1 bTBEHX"
    disabled={false}
    id="switch-component"
    onClick={[Function]}
    type="button"
  />
  <label
    className="toggle-switch__StyledLabel-ski4b0-2 doOYGH"
    for="switch-component"
  >
    A test label
  </label>
</div>
`;

exports[`<ToggleSwitch /> with default props matches with snapshot 1`] = `
<div
  className="toggle-switch__StyledSwitchContainer-ski4b0-0 geFWyC"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="toggle-switch__StyledSwitch-ski4b0-1 bTBEHX"
    disabled={false}
    id="switch-component"
    onClick={[Function]}
    type="button"
  />
  <label
    className="toggle-switch__StyledLabel-ski4b0-2 doOYGH"
    for="switch-component"
  >
    switch
  </label>
</div>
`;
